fix: fix styles on mobile

--- a/src/assets/styles/components/_pagination.scss
+++ b/src/assets/styles/components/_pagination.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 15px 0;
   gap: 15px;
+  justify-content: center;
 }
 
 .pagination__buttons {
