--- a/src/assets/styles/pages/_aboutUs.scss
+++ b/src/assets/styles/pages/_aboutUs.scss
@@ -29,7 +29,7 @@
   }
 }
 .person__list {
-  width: 500px;
+  max-width: 600px;
 }
 li::marker {
   color: $color-primary;
@@ -43,4 +43,37 @@ li::marker {
   height: 38px;
   background-size: 100%;
   background-image: url(../../../assets/image/rs_school_js.svg);
+}
+
+@media screen and (max-width: 968px) {
+  .item__wrapper {
+    border: 1px solid $color-primary;
+    border-radius: 7px;
+    margin-bottom: 20px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+    display: flex;
+    width: 90vw;
+    box-sizing: border-box;
+    flex-direction: column;
+  }
+  .person {
+    &__image-wrapper {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+    &__image {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    &__list {
+      margin-left: 10px;
+    }
+  }
 }
