--- a/src/assets/styles/pages/_catalogPage.scss
+++ b/src/assets/styles/pages/_catalogPage.scss
@@ -9,6 +9,8 @@
     display: flex;
     margin: 30px 0;
     gap: 15px;
+    max-width: 100vw;
+    flex-wrap: wrap;
   }
 
   &__container {
